v0.10.0/_sources/generated/statsmodels.tsa.statespace.representation.Representation.rst.txt
statsmodels.tsa.statespace.representation.Representation
========================================================

.. currentmodule:: statsmodels.tsa.statespace.representation

.. autoclass:: Representation

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         Representation.bind
         Representation.initialize
         Representation.initialize_approximate_diffuse
         Representation.initialize_diffuse
         Representation.initialize_known
         Representation.initialize_stationary



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         Representation.design
         Representation.dtype
         Representation.endog
         Representation.obs
         Representation.obs_cov
         Representation.obs_intercept
         Representation.prefix
         Representation.selection
         Representation.state_cov
         Representation.state_intercept
         Representation.time_invariant
         Representation.transition

