v0.13.5/_sources/generated/statsmodels.tsa.statespace.representation.Representation.rst.txt
statsmodels.tsa.statespace.representation.Representation
========================================================

.. currentmodule:: statsmodels.tsa.statespace.representation

.. autoclass:: Representation
   :exclude-members: bind,clone,diff_endog,extend,initialize,initialize_approximate_diffuse,initialize_diffuse,initialize_known,initialize_stationary,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~Representation.bind
      ~Representation.clone
      ~Representation.diff_endog
      ~Representation.extend
      ~Representation.initialize
      ~Representation.initialize_approximate_diffuse
      ~Representation.initialize_diffuse
      ~Representation.initialize_known
      ~Representation.initialize_stationary
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~Representation.design
      ~Representation.dtype
      ~Representation.endog
      ~Representation.obs
      ~Representation.obs_cov
      ~Representation.obs_intercept
      ~Representation.prefix
      ~Representation.selection
      ~Representation.state_cov
      ~Representation.state_intercept
      ~Representation.time_invariant
      ~Representation.transition
   
   
   